# auto-stitch-screenshot

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/demo/autostitchscreenshot/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  stitch_img.cpp  stitch_img.h
app/src/main/cpp/include/opencv2/: cvconfig.h  opencv.hpp  opencv_modules.hpp
app/src/main/cpp/jniLibs/: CMakeLists.txt
app/src/main/java/com/demo/autostitchscreenshot/: IBasePresenter.java  IBaseView.java  MainActivity.java
app/src/main/java/com/demo/autostitchscreenshot/adapter/: InputScreenshotAdapter.java
app/src/main/java/com/demo/autostitchscreenshot/dialog/: MessageDialog.java  ProgressDialog.java
app/src/main/java/com/demo/autostitchscreenshot/screen/: MainActivity.java
app/src/main/java/com/demo/autostitchscreenshot/usecase/: StitchImgPresenter.java  StitchImgUseCase.java
app/src/main/java/com/demo/autostitchscreenshot/utils/: Callback.java  Constants.java  ItemTouchHelperCallback.java  SpacingItemDecoration.java  Utils.java
app/src/main/java/com/demo/autostitchscreenshot/view/adapter/: InputScreenshotAdapter.java
app/src/main/java/com/demo/autostitchscreenshot/view/dialog/: MessageDialog.java  ProgressDialog.java
app/src/main/java/com/demo/autostitchscreenshot/view/screen/: MainActivity.java  ResultActivity.java  SplashActivity.java
app/src/main/res/drawable/: gradient_background.xml  round_corner_background.xml
app/src/main/res/font/: opensans.xml
app/src/main/res/layout/: activity_main.xml  activity_result.xml  activity_splash.xml  dialog_layout.xml  item_screenshot.xml  message_dialog_layout.xml  progress_dialog_layout.xml
app/src/main/res/values/: colors.xml  dimension.xml  strings.xml  styles.xml
app/src/test/java/com/demo/autostitchscreenshot/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
matisse/: build.gradle
matisse/src/main/java/com/zhihu/matisse/: StitchImgPresenter.java  StitchImgUseCase.java
matisse/src/main/java/com/zhihu/matisse/internal/model/: SelectedItemCollection.java
matisse/src/main/java/com/zhihu/matisse/internal/ui/: AlbumPreviewActivity.java  BasePreviewActivity.java  MediaSelectionFragment.java  SelectedPreviewActivity.java
matisse/src/main/java/com/zhihu/matisse/internal/ui/adapter/: AlbumMediaAdapter.java  RecyclerViewCursorAdapter.java
matisse/src/main/java/com/zhihu/matisse/ui/: MatisseActivity.java
matisse/src/main/res/drawable-hdpi/: gradient_background.xml
matisse/src/main/res/layout/: activity_matisse.xml  activity_media_preview.xml
matisse/src/main/res/values/: strings.xml
